query tool for testing data structure

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<p>PIU Tool is still under construction<p>
 	<p><h3>In Progress...</h3>
 		<ul>
-			<li>Prepare flat-file data (30/471 done)</li>
+			<li>Prepare flat-file data (58/471 done)</li>
 		</ul>
 	</p>
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>Prepare song banner lists for display</li>
 			<li>Look for appropriate static web framework</li>
-			<li>Make some magic with data
+			<li>Make some magic with data (<a href="query.html">experiment tool</a>)
 				<ul>
 					<li>Song/Stepchart lookup tool</li>
 					<li>Randomizer</li>
