--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<p>PIU Tool is still under construction<p>
 	<p><h3>In Progress...</h3>
 		<ul>
-			<li>Prepare flat-file data (58/471 done)</li>
+			<li>Prepare flat-file data (84/471 done)</li>
 		</ul>
 	</p>
 	<p><h3>Backlog</h3>
@@ -15,6 +15,7 @@
 			<li>Look for appropriate static web framework</li>
 			<li>Make some magic with data (<a href="query.html">experiment tool</a>)
 				<ul>
+					<li>Workaround with nested object query (alasql or use something else)</li>
 					<li>Song/Stepchart lookup tool</li>
 					<li>Randomizer</li>
 				</ul>
