--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<p>PIU Tool is still under construction<p>
 	<p><h3>In Progress...</h3>
 		<ul>
-			<li>Prepare flat-file data (84/471 done)</li>
+			<li>Prepare flat-file data (140/471 done)</li>
 		</ul>
 	</p>
 	<p><h3>Backlog</h3>
 		<ul>
+			<li>Markdown additional update/unlockable charts for prime2</li>
 			<li>Prepare song banner lists for display</li>
 			<li>Look for appropriate static web framework</li>
 			<li>Make some magic with data (<a href="query.html">experiment tool</a>)
