fill active songlist prime2 (2018)

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 </head>
 <body>
 	<p>PIU Tool is still under construction<p>
+	<p><h3>Done</h3>
+		<ul>
+			<li>Prepare flat-file data (471 songs)</li>
+			<li>Markdown additional update/unlockable charts for prime2</li>
+		</ul>
+	</p>
 	<p><h3>In Progress...</h3>
 		<ul>
-			<li>Prepare flat-file data (446/471 songs)</li>
-			<li>Markdown additional update/unlockable charts for prime2</li>
+			<li>Prepare song banner lists for display</li>
+			<li>Look for appropriate static web framework</li>
 		</ul>
 	</p>
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>tag customization (special/gimmick charts)</li>
-			<li>Prepare song banner lists for display</li>
-			<li>Look for appropriate static web framework</li>
 			<li>Make some magic with data (<a href="query.html">experiment tool</a>)
 				<ul>
 					<li>Workaround with nested object query (alasql or use something else)</li>
