--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<p>PIU Tool is still under construction<p>
 	<p><h3>Done</h3>
 		<ul>
-			<li>Prepare flat-file data (481 songs)</li>
+			<li>Prepare flat-file data <a href="view_songlist.html">View All Songlist</a></li>
 			<li>Markdown additional update/unlockable charts for prime2</li>
 			<li>Prepare song banner lists for display</li>
 		</ul>
@@ -19,10 +19,9 @@
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>tag customization (special/gimmick charts)</li>
-			<li>Make some magic with data (<a href="query.html">experiment tool</a>)
+			<li>Make some magic with data (experiment tools : <a href="query.html">query tool</a> | <a href="browse.html">browse tool</a>)
 				<ul>
 					<li>Workaround with nested object query (alasql or use something else)</li>
-					<li>Song/Stepchart lookup tool</li>
 					<li>Randomizer</li>
 				</ul>
 			</li>
