update songlist file source

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>tag customization (special/gimmick charts)</li>
-			<li>Make some magic with data (experiment tools : <a href="query.html">query tool</a> | <a href="browse.html">browse tool</a>)
+			<li>Make some magic with data (experiment tools : <a href="query.html">query tool</a>)
 				<ul>
 					<li>Workaround with nested object query (alasql or use something else)</li>
 					<li>Randomizer</li>
