--- a/browse.html
+++ b/browse.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script>
         var songList;
-        var jsonFile = $.getJSON( "data/songlist.json", function() {
+        var jsonFile = $.getJSON( "data/songlist_prime2.json", function() {
             songList = jsonFile.responseJSON.songlist;
         });
 
