Add default query
This allows the app to be used right away.

--- a/query.html
+++ b/query.html
@@ -25,10 +25,10 @@
 <p><i>please review existing data structure before spamming queries...</i></p>
 <div id="dataFields">
     SELECT</br>
-    <textarea id="selectClause" rols="4" cols="60" placeholder="Enter Query Here..."></textarea></br>
+    <textarea id="selectClause" rols="4" cols="60" placeholder="Enter Query Here...">*</textarea></br>
     FROM JSON(data/songlist_prime2.json)</br>
     WHERE</br>
-    <textarea id="whereClause" rols="4" cols="60" placeholder="Enter Query Here..."></textarea>
+    <textarea id="whereClause" rols="4" cols="60" placeholder="Enter Query Here...">TRUE</textarea>
     </br><button onclick="runQuery()">Run Query</button>
 </div>
 <h3>Result</h3>
