--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<p><h3>Done</h3>
 		<ul>
 			<li>Prepare flat-file data <a href="view_songlist.html">View All Songlist</a></li>
+			<li>Basic <a href="browse.html">search tool</a></li>
 			<li>Markdown additional update/unlockable charts for prime2</li>
 			<li>Prepare song banner lists for display</li>
 		</ul>
@@ -19,12 +20,7 @@
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>tag customization (special/gimmick charts)</li>
-			<li>Make some magic with data (experiment tools : <a href="query.html">query tool</a>)
-				<ul>
-					<li>Workaround with nested object query (alasql or use something else)</li>
-					<li>Randomizer</li>
-				</ul>
-			</li>
+			<li>Randomizer</li>
 			<li>Data structure refinement (?)</li>
 			<li>Whatever I could think of...</li>
 		</ul>
