--- a/view_songlist.html
+++ b/view_songlist.html
@@ -117,8 +117,8 @@
     <p>
         <span class="label">Version: </span>
         <span class="inputField">
-            <input type="radio" name="version" value="prime2" checked>Prime 2</input>
-            <input type="radio" name="version" value="xx">XX</input>
+            <input type="radio" name="version" value="xx" checked>XX</input>
+            <input type="radio" name="version" value="prime2">Prime 2</input>
         </span>
     </br>
         <span class="label">Song name: </span>
